--- a/src/app/componentes/blogsdepresion/blogsdepresion.component.html
+++ b/src/app/componentes/blogsdepresion/blogsdepresion.component.html
@@ -1,5 +1,5 @@
 <!-- ========== Inicio del bloG========== -->
-<app-menuestres></app-menuestres>
+<app-menudepresion></app-menudepresion>
 <br /><br />
 
 <section class="blog" id="blogs"></section>
@@ -49,25 +49,25 @@
           <div role="listitem" class="w-dyn-item">
             <a
               data-w-id="746c52b2-eb33-9827-9714-953f54c5c0c6"
-              href="https://www.telva.com/bienestar/psicologia/2023/01/18/63c7c07401a2f1d3448b4628.html"
+              href="https://www.altonivel.com.mx/actualidad/depresion-cual-es-la-causa-sintomas-y-como-tratar-este-trastorno/"
               class="blog-section-blog-item-wrapper w-inline-block"
               target="_blank"
             >
               <!-- ========== _blank abre otras pestañas ========== -->
               <div class="blog-item-date-and-time-wrapper">
                 <div class="blog-item-date-wrapper">
-                  <div class="text-block">Enero 18, 2023</div>
+                  <div class="text-block">Enero 13, 2023</div>
                 </div>
                 <div class="blog-item-dot"></div>
                 <div class="blog-item-time-wrapper">
-                  <div class="text-block">11:33</div>
+                  <div class="text-block">10:20</div>
                 </div>
               </div>
 
               <div class="blog-item-heading-wrapper">
                 <h4>
-                  Las 4 hormonas de la felicidad y 15 hábitos diarios para
-                  aumentarlas
+                  Depresión ¿Cuál es la causa, síntomas y cómo tratar este
+                  trastorno?
                 </h4>
               </div>
               <div class="blog-item-read-the-article-wrapper">
@@ -83,21 +83,21 @@
           <div role="listitem" class="w-dyn-item">
             <a
               data-w-id="746c52b2-eb33-9827-9714-953f54c5c0c6"
-              href="https://www.womansdayspain.es/aumentar-amor-propio/"
+              href="https://www.lt10.com.ar/noticia/355716--herramientas-y-consejos-para-luchar-contra-la-depresion"
               class="blog-section-blog-item-wrapper w-inline-block"
               target="_blank"
             >
               <div class="blog-item-date-and-time-wrapper">
                 <div class="blog-item-date-wrapper">
-                  <div class="text-block">Enero 19, 2020</div>
+                  <div class="text-block">Enero 14, 2023</div>
                 </div>
                 <div class="blog-item-dot"></div>
                 <div class="blog-item-time-wrapper">
-                  <div class="text-block">12:28</div>
+                  <div class="text-block">11:56</div>
                 </div>
               </div>
               <div class="blog-item-heading-wrapper">
-                <h4>Cómo aumentar el amor propio</h4>
+                <h4>Herramientas y consejos para luchar contra la depresión</h4>
               </div>
               <div class="blog-item-read-the-article-wrapper">
                 <div class="blog-item-read-the-article-text-wrapper">
@@ -112,47 +112,22 @@
           <div role="listitem" class="w-dyn-item">
             <a
               data-w-id="746c52b2-eb33-9827-9714-953f54c5c0c6"
-              href="https://www.noticiasdenavarra.com/belleza-y-cuidados/2023/01/29/diez-alimentos-ayudaran-combatir-estres-6379865.html"
+              href="https://www.univision.com/local/nueva-york-wxtv/depresion-post-covid-ayudas-nueva-york"
               class="blog-section-blog-item-wrapper w-inline-block"
               target="_blank"
             >
               <div class="blog-item-date-and-time-wrapper">
                 <div class="blog-item-date-wrapper">
-                  <div class="text-block">Enero 23, 2023</div>
+                  <div class="text-block">Diciembre 10, 2023</div>
                 </div>
                 <div class="blog-item-dot"></div>
                 <div class="blog-item-time-wrapper">
-                  <div class="text-block">12:00</div>
-                </div>
-              </div>
-              <div class="blog-item-heading-wrapper">
-                <h4>Diez alimentos que te ayudarán a combatir el estrés</h4>
-              </div>
-              <div class="blog-item-read-the-article-wrapper">
-                <div class="blog-item-read-the-article-text-wrapper">
-                  <div class="text-block">Leer el articulo</div>
-                </div>
-                <div class="blog-item-arrow-wrapper">
-                  <i class="fa-solid fa-arrow-right arrowrigtht"></i>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div role="listitem" class="w-dyn-item">
-            <a
-              data-w-id="746c52b2-eb33-9827-9714-953f54c5c0c6"
-              href="https://www.psicologia-online.com/manejo-de-las-emociones-estrategias-tecnicas-y-ejemplos-4940.html"
-              class="blog-section-blog-item-wrapper w-inline-block"
-              target="_blank"
-            >
-              <div class="blog-item-date-and-time-wrapper">
-                <div class="blog-item-date-wrapper">
-                  <div class="text-block">Mayo 28, 2021</div>
+                  <div class="text-block">06:06</div>
                 </div>
               </div>
               <div class="blog-item-heading-wrapper">
                 <h4>
-                  Manejo de las emociones: estrategias, técnicas y ejemplos
+                  Depresión post-covid: te decimos cómo puedes hacerle frente
                 </h4>
               </div>
               <div class="blog-item-read-the-article-wrapper">
@@ -168,20 +143,44 @@
           <div role="listitem" class="w-dyn-item">
             <a
               data-w-id="746c52b2-eb33-9827-9714-953f54c5c0c6"
-              href="https://www.mdzol.com/sociedad/2023/1/17/las-claves-para-dormir-bien-cuidar-la-salud-307882.html"
+              href="https://www.menshealth.com/es/salud-bienestar/a36318243/como-detectar-depresion/"
+              class="blog-section-blog-item-wrapper w-inline-block"
               target="_blank"
             >
               <div class="blog-item-date-and-time-wrapper">
                 <div class="blog-item-date-wrapper">
-                  <div class="text-block">Enero 17, 2023</div>
-                </div>
-                <div class="blog-item-dot"></div>
-                <div class="blog-item-time-wrapper">
-                  <div class="text-block">17:00</div>
+                  <div class="text-block">Enero 19, 2023</div>
                 </div>
               </div>
               <div class="blog-item-heading-wrapper">
-                <h4>Las claves para dormir bien y cuidar la salud</h4>
+                <h4>Depresión: qué es y síntomas</h4>
+              </div>
+              <div class="blog-item-read-the-article-wrapper">
+                <div class="blog-item-read-the-article-text-wrapper">
+                  <div class="text-block">Leer el articulo</div>
+                </div>
+                <div class="blog-item-arrow-wrapper">
+                  <i class="fa-solid fa-arrow-right arrowrigtht"></i>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div role="listitem" class="w-dyn-item">
+            <a
+              data-w-id="746c52b2-eb33-9827-9714-953f54c5c0c6"
+              href="https://www.infobae.com/salud/2023/01/13/como-detectar-las-senales-de-la-depresion-en-ninos-y-adolescentes/"
+              target="_blank"
+            >
+              <div class="blog-item-date-and-time-wrapper">
+                <div class="blog-item-date-wrapper">
+                  <div class="text-block">Febrero 8, 2023</div>
+                </div>
+              </div>
+              <div class="blog-item-heading-wrapper">
+                <h4>
+                  Cómo detectar las señales de la depresión en niños y
+                  adolescentes
+                </h4>
               </div>
               <div class="blog-item-read-the-article-wrapper">
                 <div class="blog-item-read-the-article-text-wrapper">
