--- a/src/app/componentes/menudepresion/menudepresion.component.html
+++ b/src/app/componentes/menudepresion/menudepresion.component.html
@@ -3,7 +3,7 @@
   <nav class="navbar" style="right: -2em; position: relative">
     <ul>
       <li><a href="#home">home</a></li>
-      <li><a href="/testansiedadinfo">Realizar Test de Depresión</a></li>
+      <li><a routerLink="/testdepresioninfo">Realizar Test de Depresión</a></li>
       <li>
         <a routerLink="/queesdepresion">¿Qué es el Depresión?</a>
       </li>
@@ -16,12 +16,9 @@
         </ul>
       </li>
       <li>
-        <a routerLink="/preveniransiedad">COMO PREVENIR LA Depresión </a>
+        <a routerLink="/sintomasdepresion">Síntomas de la Depresión</a>
       </li>
-      <li>
-        <a href="/sintomasansiedad">Síntomas de la Depresión</a>
-      </li>
-      <li><a routerLink="/blogansiedad">Blogs</a></li>
+      <li><a routerLink="/blogsdepresion">Blogs</a></li>
       <li>
         <a href="#">Iniciar Sesión</a>
         <ul>
